--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="./style.css" rel="stylecheat">
-    <div>
-
-    </div>
+    <link href="./style.css" rel="stylescheat">
+    
 </head>
 <body>
-
+    <main>
+        <div>
+            <p>"this is a div"</p>
+        </div>
+    </main>
 </body>
 
 </html>
