--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="./style.css" rel="stylescheat">
-    
+    <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
     <main>
