--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <div>
             <p>"this is a div"</p>
         </div>
+        <div>
+            <p>"second div"</p>
+        </div>
     </main>
 </body>
 
