--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     </head>
 <body>
     <main>
-      <div></div>
+      <div id="title">
+        <h1>TO DO APP</h1>
+      </div>
+      <div>
+        <input id="input" placeholder="Task">
+        <button type="submit" id="newTask">Submit</button>
+      </div>
+      <div id="tasks">
+
+      </div>
         
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
