--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <h1>TO DO APP</h1>
       </div>
       <div>
-        <input id="input" placeholder="Task">
-        <button type="submit" id="newTask">Submit</button>
+        <input id="input" placeholder="Task" type="text">
+        <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
       <div id="tasks">
+        <ul id="newTasks">
 
+        </ul>
       </div>
         
     </main>
