--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
         
     </main>
-    <script src="/script.js" rel="script"></script>
+    <script src="/Practice/script.js" rel="script"></script>
     
 </body>
 
