arrange grid and buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         </head>
 <body>
     <main>
+      <div id="form">
       <div id="title">
         <h1>TO DO APP</h1>
       </div>
-      <div>
+      <div id="insub">
         <input id="input" placeholder="Task" type="text">
         <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
@@ -19,6 +20,7 @@
         <!--<ol id="newTasks">
         </ol>-->
       </div>
+    </div>
         
     </main>
     <script src="/script.js" rel="script"></script>
