--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
         
     </main>
-    <script src="/script.js" rel="script"></script>
+    <script src="/Practice/script.js" rel="script"></script>
     
 </body>
 
