--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         </head>
 <body>
     <main>
+      <!--Wave. dont changes this-->
+      <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
       <div id="form">
       <div id="title">
         <h1>TO DO APP</h1>
@@ -22,7 +28,7 @@
     </div>
         
     </main>
-    <script src="/Practice/script.js" rel="script"></script>
+    <script src="/script.js" rel="script"></script>
     
 </body>
 
