--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>TO DO APP</h1>
       </div>
       <div id="insub">
-        <input id="input" placeholder="Task" type="text">
+        <input id="input" placeholder="New task" type="text">
         <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
       <div id="tasks">
