--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
         <input id="input" placeholder="New task" type="text">
         <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
-      <div id="tasks">
-
+        <div class="container">
+            <div class="firstItem">
+                <div id="tasks"></div>
+            </div>
+            <div class="secondItem">
+                <button id="eliminarTodas"><h1>Vaciar</h1></button>
+            </div> 
+        </div>
       </div>
-    </div>
+      </div>
         
     </main>
     <script src="/script.js" rel="script"></script>
