--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                           
         </div>
       </div>
-      <div><button id="eliminarTodas"><h1>Vaciar</h1></button>
+      <div><button id="eliminarTodas" onclick="removeAll()"><h1>Vaciar</h1></button>
       </div>
         
     </main>
