progres in removeAll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
         <div class="container">
-            <div class="firstItem">
+            <div class="firstItem" id="firstItem">
                 <div id="tasks">
                  
                 </div>
