--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <link href="style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>to do app</title>
-        </head>
+    <title>To-Do App</title>
+    <link href="/lista-de-la-compra.png" rel="icon" type="image/x-icon"></link>
+    </head>
 <body>
     <main>
       <!--Wave. dont changes this-->
