--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
-    <link href="/lista-de-la-compra.png" rel="icon" type="image/x-icon"></link>
+    <link href="/lista-de-la-compra (1).png" rel="icon" type="image/x-icon"></link>
     </head>
 <body>
     <main>
