--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
           </div>
         </div>      
       </div> 
+      <div class="containerx">
       <div class="firstItem" id="firstItem">
             <div id="tasks">
                  
             </div>
       </div> 
-      <div class="col-xs-12">                 
-        <button class="btn btn-block col-xs-12"  id="eliminarTodas"  onclick="removeAll()">Vaciar</button>
+    </div>
+      <div class="d-grid gap-2 col col-sm mx-auto">                 
+        <button type="button" class="btn btn-primary"  id="eliminarTodas"  onclick="removeAll()">Vaciar</button>
       </div>
     </div>
     </main>
