--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
       </div> 
     </div>
-      <div class="d-grid gap-2 col col-sm mx-auto">                 
+      <div class="d-grid">                 
         <button type="button" class="btn btn-primary"  id="eliminarTodas"  onclick="removeAll()">Vaciar</button>
       </div>
     </div>
