--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>      
       </div> 
-      <div class="containerx">
+      <div class="containerx d-grid">
       <div class="firstItem" id="firstItem">
             <div id="tasks">
                  
