--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>TO DO APP</h1>
       </div>
     </div>
-      <div class="row">
+      <div class="row d-grid">
         <div id="insub" class="col-xs-8">
           <input id="input" placeholder="New task" type="text">
            <button type="submit" class="col-xs-4" id="newTask" onclick="addNewTask()">Submit</button>
