--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input id="input" placeholder="New task" type="text">
         <button type="submit" id="newTask" onclick="addNewTask()">Submit</button>
       </div>
-        <div class="container">
+        <div class="containerx">
             <div class="firstItem" id="firstItem">
                 <div id="tasks">
                  
